# zptess-rs

./: Cargo.toml  NOTES.md  TODO.md  diesel.toml
migrations/sqlite/2023-09-03-221723_initial/: down.sql  up.sql
resources/sql/: schema.sql
resources/sql/initial/: config.sql
resources/sql/updates/: 03_summary.sql  04_sensor.sql  05_batch_comm.sql  06_swversion.sql
src/: argparse.rs  database.rs  lib.rs  logging.rs  main.rs
src/database/: mod.rs  models.rs  schema.rs  views.rs
src/photometer/: mod.rs  payload.rs  transport.rs
src/photometer/discovery/: database.rs  http.rs  mod.rs
src/photometer/payload/: cristogg.rs  info.rs  json.rs  mod.rs  payload.rs
src/photometer/transport/: mod.rs  serial.rs  udp.rs
src/photometer/update/: http.rs
src/statistics/: auxiliary.rs  calibration.rs  dao.rs  mod.rs  readings.rs
