[package]
name = "zptess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
clap = { version = "4.4.1", features = [
    "derive", # Used dervie API
]}
rust-embed = { version = "8.0.0", features = [
    "include-exclude",
]}
rusqlite = { version ="0.29.0", features = [
	"bundled",
]}
uuid = { version = "1.4.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
tracing-appender = "0.2.2"
